                added UpdateInterventionSounds()
            OpenalSoundInterface.cpp
                added UpdateInterventionSounds()
                added update and starting of intervention sounds
            SoundInterface.cpp
                added setInterventionSound()
                added SetInterventionVolume()
                added GetInterventionVolume()
                added InterventionVolume member to init
                added Clamp() helper function
            SoundInterface.h
                added setInterventionSound()
                added intervention_sounds map
                added SetInterventionVolume()
                added GetInterventionVolume()
                added InterventionVolume member
                added Clamp() helper function
        userinterface/
            legacymenu.h 
                  ActivateResearcherMenu()
            legacymenu.cpp
                  included "ResearcherMenu.h"
                  included "DataSelectionMenu.h"
                  added    ActivateResearcherMenu()
                  changed  backLoad()
                  changed  activate()
            racestopmenu.cpp
                RmStopRaceMenu()
                    changed  AssistedHuman is a human
            legacymenu/CMakeList.txt
                  added    ResearcherMenu.h and .cpp
                  added    DataSelectionMenu.h and .cpp
                  added    backend in both ADD_SDLIB_LIBRARY and ADD_SDLIB_INCLUDEDIR
                racescreens/
                    racerunningmenus.cpp
                        removed RmProgressiveTimeModifier implementation and calls
                    racestopmenu.cpp
                        removed rmProgressiveTimeModifier.start() call
                confscreens/soundconfig.cpp
                    added ChangeInterventionVolume()
                    added logic to create new controls for intervention volume and store their data
        graphic/
            ssggraph/